--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Weather app</string>
     <string name="search">Search</string>
     <string name="add_city">Add city</string>
+    <string name="upcoming">Upcoming</string>
 </resources>
